<resources>
    <string name="app_name">ReactionGame</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">You are not registered yet!</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="registration_success">Registration succesful</string>
    <string name="registration_failed">Registration failed. Please try again later.</string>
    <string name="clear_form">Clear form</string>
    <string name="save_profile">Save profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_profile_image">User profile image</string>
    <string name="missing_picture">You need to choose a profile picture!</string>
    <string name="missing_username">You need to enter a username!</string>
    <string name="missing_password">You need to enter a password!</string>
    <string name="photo_upload_failed">Failed uploading photo</string>
    <string name="delete_history">Delete history</string>
    <string name="play">Play</string>
    <string name="logout">LogOut</string>
    <string name="exit">Exit</string>
    <string name="pick_image">Pick Image</string>
    <string name="duplicate_username">Sorry the username already exists</string>
    <string name="ok_username">Great User Name =)</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="tab_title_score_game_1">Scores Game 1</string>
    <string name="tab_title_score_game_2">Scores Game 2</string>
    <string name="tab_title_score_game_3">Scores Game 3</string>
    <string name="tab_title_score_game_4">Scores Game 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyScoreText">My Score</string>
    <string name="OpponentScoreText">Opponent Score:</string>
    <string name="WaitingOpponentText">Waiting for opponent...</string>
    <string name="GetReady">Get Ready!</string>
    <string name="PointYou">Point for you!</string>
    <string name="PointOpponent">Point for opponent</string>
    <string name="GameTimeText">Time:</string>
    <string name="TotalTimeText">My total time:</string>
    <string name="Correct">Correct!</string>
    <string name="Wrong">Wrong! (Time penalization)</string>
    <string name="NoWinner">Both wrong, no point</string>
</resources>
