<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluewallpapergame"
    tools:context=".GameActivity" >

    <LinearLayout
        android:id="@+id/Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/MyScoreLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/MyScoreText"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/OpponentScoreLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/OpponentScoreText"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/MyScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/OpponentScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/GameField"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/Timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Field0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Field3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Field6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Field8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="false"
                android:gravity="center_vertical"
                android:onClick="selectField"
                android:text="?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/DescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="testButtonElias"
            android:text="@string/WaitingOpponentText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GameTimeText"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TotalTimeText"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:id="@+id/GameTime"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="00:00"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="20sp" />-->

            <com.lab.epfl.reactiongame.Chronometer
                android:id="@+id/GameTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/TotalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


<!--            <com.lab.epfl.reactiongame.Chronometer-->
<!--                android:id="@+id/TotalTime"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="16sp"-->
<!--                />-->

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>